--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ layout: default
 <section class="slice-xl pt-5 sct-color-1" id="why-us">
                         <div class="container">
                         
-                            <div class="section-title section-title--style-1 text-center mb-2 animate-on-scroll fadeInDown">
+                            <div class="section-title section-title--style-1 text-center mb-2 mt-5 animate-on-scroll fadeInDown">
                                 <h1 class="heading heading-1 c-gray-light strong-600">
                                     <span>What We Do The Best</span>
                                 </h1>
@@ -200,7 +200,7 @@ layout: default
                             <div class="row-wrapper">
                                 <div class="row cols-xs-space cols-sm-space cols-md-space">
                                     <div class="col-lg-6 col-sm-12 col-12">
-                                        <div class="feature feature--boxed-border feature--bg-1 z-depth-2-top animate-on-scroll fadeInLeft">
+                                        <div class="feature feature--boxed-border mt-3 feature--bg-1 z-depth-2-top animate-on-scroll fadeInLeft">
                                             <div class="icon-block icon-block--style-1-v2">
                                                 <div class="block-icon text-xs-left">
                                                     <i class="icon-mouse"></i>
@@ -217,7 +217,7 @@ layout: default
                                     </div>
 
                                     <div class="col-lg-6 col-sm-12 col-12">
-                                        <div class="feature feature--boxed-border feature--bg-1 z-depth-2-top animate-on-scroll fadeInRight">
+                                        <div class="feature feature--boxed-border mt-3 feature--bg-1 z-depth-2-top animate-on-scroll fadeInRight">
                                             <div class="icon-block icon-block--style-1-v2">
                                                 <div class="block-icon text-xs-left">
                                                     <i class="icon-screen-tablet"></i>
@@ -236,7 +236,7 @@ layout: default
 
                                 <div class="row cols-xs-space cols-sm-space cols-md-space">
                                     <div class="col-lg-6 col-sm-12 col-12">
-                                        <div class="feature feature--boxed-border feature--bg-1 z-depth-2-top animate-on-scroll fadeInLeft">
+                                        <div class="feature feature--boxed-border mt-3 feature--bg-1 z-depth-2-top animate-on-scroll fadeInLeft">
                                             <div class="icon-block icon-block--style-1-v2">
                                                 <div class="block-icon text-xs-left">
                                                     <i class="icon-cloud-download"></i>
@@ -253,7 +253,7 @@ layout: default
                                     </div>
 
                                     <div class="col-lg-6 col-sm-12 col-12">
-                                        <div class="feature feature--boxed-border feature--bg-1 z-depth-2-top animate-on-scroll fadeInRight">
+                                        <div class="feature feature--boxed-border mt-3 feature--bg-1 z-depth-2-top animate-on-scroll fadeInRight">
                                             <div class="icon-block icon-block--style-1-v2">
                                                 <div class="block-icon text-xs-left">
                                                     <i class="icon-like"></i>
@@ -275,7 +275,7 @@ layout: default
                         </div>
                     </section>
 
-<section class="pb-4">
+<section class="pb-0">
                         <div class="row-fluid">
                             <div class="slice px-4 bg-base-1 rounded">
                                 <div class="px-4 sct-inner">
@@ -288,30 +288,11 @@ layout: default
                                                 <p class="mt-4 text-lg line-height-1_8">
                                                     No matter you are a developer or new to web design, you will find our theme very easy to customize with an intuitive HTML markup.
                                                 </p>
-                                                <a href="homepage-9.html#" class="btn btn-styled btn-white btn-circle mt-4">
+                                                <a href="#" class="btn btn-styled btn-white btn-circle mt-4">
                                                     Try it now!
                                                 </a>
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-
-                    <section class="slice-xl slice-video d-flex align-items-center" data-vide-bg="/assets/videos/video.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%">
-                        <span class="mask mask-dark--style-1 alpha-7"></span>
-                        <div class="container">
-                            <div class="col">
-                                <div class="row justify-content-center">
-                                    <div class="col-md-10 text-center">
-                                        <h2 class="heading heading-responsive heading-6 c-gray-lighter text-uppercase strong-600">
-                                            Ready to grow faster?
-                                        </h2>
-                                        <h3 class="heading heading-inverse heading-xl strong-600 mt-3 text-capitalize">Create your own experience</h3>
-                                        <a href="https://www.youtube.com/watch?v=zodT9bCdIiI" class="play-video play-video-inline play-video--2 mt-4" data-fancybox="">
-                                            <i class="fa fa-play"></i>
-                                        </a>
                                     </div>
                                 </div>
                             </div>
