--- a/index.html
+++ b/index.html
@@ -152,14 +152,68 @@ layout: default
                                         </div>
                                     </div>
                                 </div>
-                              
-                            </div>
+         <div class="sct-color-1">
+<span class="space-xs-xl"></span>
+ </div>                             
+                          </div>
                         </div>
                     </section>                
 
-<div class="sct-color-1">
-<span class="space-xs-xl"></span>
- </div>   
+  
+<section class="slice-lg pt-0 sct-color-1">
+                        <div class="container">
+                            <div class="text-center">
+                                <h3 class="heading heading-2 strong-400 mb-2">
+                                   Intregrations with over 1500+ partners
+                                </h3>
+                                <div class="fluid-paragraph">
+                                    Start your big commmerce trip in no time and with no friction.
+                                </div>
+                            </div>
+
+                            <div class="swiper-js-container mt-5">
+                                <div class="swiper-container swiper-container-horizontal swiper-container-undefined" data-swiper-items="6" data-swiper-space-between="20" data-swiper-md-items="4" data-swiper-sm-space-between="20" data-swiper-sm-items="2" data-swiper-xs-items="2">
+                                    <div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
+                                        <div class="swiper-slide swiper-slide-active" style="width: 168.333px; margin-right: 20px;">
+                                            <div class="client-logo client-logo--style-3">
+                                                <img src="/assets/images/prv/clients/brands/adobe-258x116.png" class="img-responsive">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide swiper-slide-next" style="width: 168.333px; margin-right: 20px;">
+                                            <div class="client-logo client-logo--style-3">
+                                                <img src="/assets/images/prv/clients/brands/jquery-258x116.png" class="img-responsive">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
+                                            <div class="client-logo client-logo--style-3">
+                                                <img src="/assets/images/prv/clients/brands/sass-258x116.png" class="img-responsive">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
+                                            <div class="client-logo client-logo--style-3">
+                                                <img src="/assets/images/prv/clients/brands/github-258x116.png" class="img-responsive">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
+                                            <div class="client-logo client-logo--style-3">
+                                                <img src="/assets/images/prv/clients/brands/google-258x116.png" class="img-responsive">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
+                                            <div class="client-logo client-logo--style-3">
+                                                <img src="/assets/images/prv/clients/brands/esquire-258x116.png" class="img-responsive">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
+                                            <div class="client-logo client-logo--style-3">
+                                                <img src="/assets/images/prv/clients/brands/wordpress-258x116.png" class="img-responsive">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
 <section class="slice-sm bg-base-1">
                         <div class="container sct-inner">
