--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover" style="padding-bottom: 280px; background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg); background-position: bottom center;">
+                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover" style="padding-bottom: 320px; background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg); background-position: bottom center;">
                                         <span class="mask mask-base-1--style-6 alpha-7"></span>
                                         <div class="container container-lg slice--offset-top d-flex align-items-center">
                                             <div class="col px-0">
@@ -158,62 +158,26 @@ layout: default
                           </div>
                         </div>
                     </section>                
-
-  
-<section class="slice-lg pt-0 sct-color-1">
+<section class="slice-xl slice-video d-flex align-items-center" data-vide-bg="/assets/media/video/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%"><div style="position: absolute; z-index: -1; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow: hidden; background-size: cover; background-color: transparent; background-repeat: no-repeat; background-position: 0% 0%;"><video autoplay="" loop="" style="margin: auto; position: absolute; z-index: -1; top: 0%; left: 0%; transform: translate(0%, 0%); visibility: hidden; opacity: 0; width: auto; height: 602px;"><source src="../../assets/media/video/broadwaycrew.mp4" type="video/mp4"><source src="../../assets/media/video/broadwaycrew.webm" type="video/webm"><source src="../../assets/media/video/broadwaycrew.ogv" type="video/ogg"></video></div>
+                        <span class="mask mask-dark--style-1 alpha-7"></span>
                         <div class="container">
-                            <div class="text-center">
-                                <h3 class="heading heading-2 strong-400 mb-2">
-                                   Intregrations with over 1500+ partners
-                                </h3>
-                                <div class="fluid-paragraph">
-                                    Start your big commmerce trip in no time and with no friction.
-                                </div>
-                            </div>
-
-                            <div class="swiper-js-container mt-5">
-                                <div class="swiper-container swiper-container-horizontal swiper-container-undefined" data-swiper-items="6" data-swiper-space-between="20" data-swiper-md-items="4" data-swiper-sm-space-between="20" data-swiper-sm-items="2" data-swiper-xs-items="2">
-                                    <div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
-                                        <div class="swiper-slide swiper-slide-active" style="width: 168.333px; margin-right: 20px;">
-                                            <div class="client-logo client-logo--style-3">
-                                                <img src="/assets/images/prv/clients/brands/adobe-258x116.png" class="img-responsive">
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide swiper-slide-next" style="width: 168.333px; margin-right: 20px;">
-                                            <div class="client-logo client-logo--style-3">
-                                                <img src="/assets/images/prv/clients/brands/jquery-258x116.png" class="img-responsive">
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
-                                            <div class="client-logo client-logo--style-3">
-                                                <img src="/assets/images/prv/clients/brands/sass-258x116.png" class="img-responsive">
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
-                                            <div class="client-logo client-logo--style-3">
-                                                <img src="/assets/images/prv/clients/brands/github-258x116.png" class="img-responsive">
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
-                                            <div class="client-logo client-logo--style-3">
-                                                <img src="/assets/images/prv/clients/brands/google-258x116.png" class="img-responsive">
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
-                                            <div class="client-logo client-logo--style-3">
-                                                <img src="/assets/images/prv/clients/brands/esquire-258x116.png" class="img-responsive">
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
-                                            <div class="client-logo client-logo--style-3">
-                                                <img src="/assets/images/prv/clients/brands/wordpress-258x116.png" class="img-responsive">
-                                            </div>
-                                        </div>
+                            <div class="col">
+                                <div class="row justify-content-center">
+                                    <div class="col-md-10 text-center">
+                                        <h2 class="heading heading-responsive heading-6 c-gray-lighter text-uppercase strong-600">
+                                            Ready to grow faster?
+                                        </h2>
+                                        <h3 class="heading heading-inverse heading-xl strong-600 mt-3 text-capitalize">Create your own experience</h3>
+                                        <a href="#" class="play-video play-video-inline play-video--2 mt-4" data-fancybox="">
+                                            <i class="fa fa-play"></i>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </section>
+
+  
 
 <section class="slice-sm bg-base-1">
                         <div class="container sct-inner">
@@ -435,7 +399,60 @@ layout: default
                             </div>
                         </div>
                     </section>
+<section class="slice-lg pt-0 sct-color-1">
+                        <div class="container">
+                            <div class="text-center">
+                                <h3 class="heading heading-2 strong-400 mb-2">
+                                   Intregrations with over 1500+ partners
+                                </h3>
+                                <div class="fluid-paragraph">
+                                    Start your big commmerce trip in no time and with no friction.
+                                </div>
+                            </div>
 
+                            <div class="swiper-js-container mt-5">
+                                <div class="swiper-container swiper-container-horizontal swiper-container-undefined" data-swiper-items="6" data-swiper-space-between="20" data-swiper-md-items="4" data-swiper-sm-space-between="20" data-swiper-sm-items="2" data-swiper-xs-items="2">
+                                    <div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
+                                        <div class="swiper-slide swiper-slide-active" style="width: 168.333px; margin-right: 20px;">
+                                            <div class="client-logo client-logo--style-3">
+                                                <img src="/assets/images/prv/clients/brands/adobe-258x116.png" class="img-responsive">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide swiper-slide-next" style="width: 168.333px; margin-right: 20px;">
+                                            <div class="client-logo client-logo--style-3">
+                                                <img src="/assets/images/prv/clients/brands/jquery-258x116.png" class="img-responsive">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
+                                            <div class="client-logo client-logo--style-3">
+                                                <img src="/assets/images/prv/clients/brands/sass-258x116.png" class="img-responsive">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
+                                            <div class="client-logo client-logo--style-3">
+                                                <img src="/assets/images/prv/clients/brands/github-258x116.png" class="img-responsive">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
+                                            <div class="client-logo client-logo--style-3">
+                                                <img src="/assets/images/prv/clients/brands/google-258x116.png" class="img-responsive">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
+                                            <div class="client-logo client-logo--style-3">
+                                                <img src="/assets/images/prv/clients/brands/esquire-258x116.png" class="img-responsive">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
+                                            <div class="client-logo client-logo--style-3">
+                                                <img src="/assets/images/prv/clients/brands/wordpress-258x116.png" class="img-responsive">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
             <section class="slice-xl bg-base-1" style="padding-top: 350px; padding-bottom: 100px;">
                         <div class="shape-container" data-shape-fill="sct-color-1" data-shape-style="opaque_waves_1" data-shape-position="top" style="height: 350px;">
