--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ layout: default
                           </div>
                         </div>
                     </section>                
-<section class="slice-xl slice-video d-flex align-items-center" data-vide-bg="/assets/media/video/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%"><div style="position: absolute; z-index: -1; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow: hidden; background-size: cover; background-color: transparent; background-repeat: no-repeat; background-position: 0% 0%;"><video autoplay="" loop="" style="margin: auto; position: absolute; z-index: -1; top: 0%; left: 0%; transform: translate(0%, 0%); visibility: hidden; opacity: 0; width: auto; height: 602px;"><source src="../../assets/media/video/broadwaycrew.mp4" type="video/mp4"><source src="../../assets/media/video/broadwaycrew.webm" type="video/webm"><source src="../../assets/media/video/broadwaycrew.ogv" type="video/ogg"></video></div>
+<section class="slice-xl slice-video d-flex align-items-center" data-vide-bg="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%"><div style="position: absolute; z-index: -1; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow: hidden; background-size: cover; background-color: transparent; background-repeat: no-repeat; background-position: 0% 0%;"><video autoplay="" loop="" style="margin: auto; position: absolute; z-index: -1; top: 0%; left: 0%; transform: translate(0%, 0%); visibility: hidden; opacity: 0; width: auto; height: 602px;"><source src="../../assets/media/video/broadwaycrew.mp4" type="video/mp4"><source src="../../assets/media/video/broadwaycrew.webm" type="video/webm"><source src="../../assets/media/video/broadwaycrew.ogv" type="video/ogg"></video></div>
                         <span class="mask mask-dark--style-1 alpha-7"></span>
                         <div class="container">
                             <div class="col">
@@ -415,12 +415,12 @@ layout: default
                                     <div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                                         <div class="swiper-slide swiper-slide-active" style="width: 168.333px; margin-right: 20px;">
                                             <div class="client-logo client-logo--style-3">
-                                                <img src="/assets/images/prv/clients/brands/adobe-258x116.png" class="img-responsive">
+                                                <img src="{{ site.baseurl }}/assets/images/prv/clients/brands/adobe-258x116.png" class="img-responsive">
                                             </div>
                                         </div>
                                         <div class="swiper-slide swiper-slide-next" style="width: 168.333px; margin-right: 20px;">
                                             <div class="client-logo client-logo--style-3">
-                                                <img src="/assets/images/prv/clients/brands/jquery-258x116.png" class="img-responsive">
+                                                <img src="{{ site.baseurl }}/assets/images/prv/clients/brands/jquery-258x116.png" class="img-responsive">
                                             </div>
                                         </div>
                                         <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
