--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@ layout: default
 ---
 
 <section class="swiper-js-container background-image-holder">
-                        <div class="swiper-container" data-swiper-autoplay="true" data-swiper-effect="slide" data-swiper-items="1" data-swiper-space-between="0">
+                        <div class="swiper-container" data-swiper-autoplay="false" data-swiper-effect="slide" data-swiper-items="1" data-swiper-space-between="0">
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
                                     <div class="holder-item holder-item-light has-bg-cover bg-size-cover" style="padding-bottom: 320px; background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg); background-position: bottom center;">
-                                        <span class="mask mask-base-1--style-6 alpha-7"></span>
+                                        <span class="mask mask-base-1--style-6 alpha-5"></span>
                                         <div class="container container-lg slice--offset-top d-flex align-items-center">
                                             <div class="col px-0">
                                                 <div class="row cols-xs-space cols-sm-space cols-md-space mt-3">
