--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@ layout: default
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover" style="padding-bottom: 240px; background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg); background-position: bottom center;">
-                                        <span class="mask mask-base-1--style-1 alpha-6"></span>
-                                        <div class="container container-lg slice--offset-top d-flex align-items-center">
+                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover" style="padding-bottom: 320px; background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg); background-position: bottom center;">
+                                        <span class="mask mask-base-1--style-2 alpha-6"></span>
+                                        <div class="container container-lg slice--offset-top d-flex align-items-center mt-5">
                                             <div class="col px-0">
-                                                <div class="row cols-xs-space cols-sm-space cols-md-space mt-3">
+                                                <div class="row cols-xs-space cols-sm-space cols-md-space mt-5">
                                                     <div class="col-lg-7 text-center text-lg-left align-self-center">
                                                         <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 animated" data-animation-in="fadeInDownBig" data-animation-delay="200">
                                                            Secure And Scale Your Business With Everpay
                                                         </h2>
                                                         <p class="lead animated mt-4" data-animation-in="fadeInUpBig" data-animation-delay="200">
-                                                            Everpay is an innovative open payments company, focusing on simplifying global payments and unifing big commerce under one single secure source.
+                                                            Everpay is an open payments company, focusing on simplifying payments and unifing big commerce under one single secure source.
                                                         </p>
 
                                                         <a href="#" target="_blank" class="btn btn-styled btn-lg btn-white btn-circle btn-outline mt-5 animated" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do">
