--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
                                     <div class="holder-item holder-item-light has-bg-cover bg-size-cover" style="padding-bottom: 320px; background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg); background-position: bottom center;">
                                         <span class="mask mask-base-1--style-2 alpha-6"></span>
                                         <div class="container container-lg slice--offset-top d-flex align-items-center mt-5">
-                                            <div class="col px-0">
+                                            <div class="col px-0 mt-5">
                                                 <div class="row cols-xs-space cols-sm-space cols-md-space mt-5">
                                                     <div class="col-lg-7 text-center text-lg-left align-self-center">
                                                         <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 animated" data-animation-in="fadeInDownBig" data-animation-delay="200">
