--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: default
                     </section>
                     
                     <section class="slice-md sct-color-1" id="sct_what_we_do">
-                        <div class="container">
+                        <div class="container mt-5">
                 
                             <div class="section-title section-title--style-1 text-center mb-2 animate-on-scroll fadeInDown">
                                 <h1 class="heading heading-1 c-gray-light strong-600">
