--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<link id="stylesheet" href="{{ "/assets/css/frontpage.css" | prepend: site.baseurl }}" type="text/css" rel="stylesheet" media="screen">
 
 <section class="swiper-js-container background-image-holder">
                         <div class="swiper-container" data-swiper-autoplay="false" data-swiper-effect="slide" data-swiper-items="1" data-swiper-space-between="0">
