--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ layout: default
           </div>
         </div>
       </div>                          
-<img class="img-fluid d-none d-md-block w-75 mx-auto mb-7" src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554265683/svg/components/pointer-1.svg" alt="SVG Arrow">
+<img class="img-fluid align-items-center d-md-block w-75 mx-auto mb-7" src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554265683/svg/components/pointer-1.svg" alt="SVG Arrow">
                           
                           
                             <div class="row cols-xs-space cols-sm-space cols-md-space align-items-center">
