--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section class="swiper-js-container background-image-holder">
-                        <div class="swiper-container" data-swiper-autoplay="false" data-swiper-effect="slide" data-swiper-items="1" data-swiper-space-between="0">
+                        <div class="swiper-container" data-swiper-autoplay="false" data-swiper-effect="slide" data-swiper-items="0" data-swiper-space-between="0">
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
@@ -13,7 +13,7 @@ layout: default
                                             <div class="col px-0 mt-5">
                                                 <div class="row cols-xs-space cols-sm-space cols-md-space mt-5">
                                                     <div class="col-lg-7 text-center text-lg-left align-self-center">
-                                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 animated" data-animation-in="fadeInDownBig" data-animation-delay="200">
+                                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 animated mt-3" data-animation-in="fadeInDownBig" data-animation-delay="200">
                                                            Secure And Scale Your Business With Everpay
                                                         </h2>
                                                         <p class="lead animated mt-4" data-animation-in="fadeInUpBig" data-animation-delay="200">
