--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="swiper-js-container background-image-holder">
+<section class="js-container background-image-holder">
                         <div class="swiper-container" data-swiper-autoplay="false" data-swiper-effect="slide" data-swiper-items="0" data-swiper-space-between="0">
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
@@ -44,7 +44,7 @@ layout: default
                         <div class="container mt-5">
                 
                             <div class="section-title section-title--style-1 text-center mb-2 animate-on-scroll fadeInDown mt-5">
-                                <h1 class="heading heading-1 c-gray-light strong-600">
+                                <h1 class="heading heading-1 c-gray-light strong-600 mt-3">
                                     <span>Top Reasons to Work With Us</span>
                                 </h1>
                                 <span class="section-title-delimiter clearfix d-none"></span>
