--- a/index.html
+++ b/index.html
@@ -58,30 +58,30 @@ layout: default
         <div class="col-md-4 mb-7 mt-5">
           <div class="text-center px-lg-3">
             <span class="btn btn-icon btn-lg  btn-soft-success rounded-circle mb-5">
-              <span class="fab fa-yelp fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
+              <span class="fab fa-credit-card fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
-            <h3 class="h5">Professional Design</h3>
-            <p class="mb-md-0">Achieve virtually any design and layout from within the one template.</p>
+            <h3 class="h5">Global Payments</h3>
+            <p class="mb-md-0">With one simple integration, your business can accept payments in 50+ currencies and in over 25 countries.</p>
           </div>
         </div>
 
         <div class="col-md-4 mb-7 mt-5">
           <div class="text-center px-lg-3">
             <span class="btn btn-icon btn-lg btn-soft-success rounded-circle mb-5">
-              <span class="fas fa-fire fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
+              <span class="fas fa-microchip fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
-            <h3 class="h5">Front Strategy</h3>
-            <p class="mb-md-0">We strive to figure out ways to help your business grow through all platforms.</p>
+            <h3 class="h5">Industry Neutral</h3>
+            <p class="mb-md-0">We have a payment solution for every type of business in every industry.</p>
           </div>
         </div>
 
         <div class="col-md-4 mb-7 mt-5">
           <div class="text-center px-lg-3">
             <span class="btn btn-icon btn-lg btn-soft-success rounded-circle mb-5">
-              <span class="fab fa-whmcs fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
+              <span class="fab fa-code-branch fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
-            <h3 class="h5">Unlimited Power</h3>
-            <p class="mb-md-0">Find what you need in one template and combine features at will.</p>
+            <h3 class="h5">Processor integrations</h3>
+            <p class="mb-md-0">Everpay is certified with nearly all major payment processing organizations world wide. </p>
           </div>
         </div>
       </div>
@@ -90,20 +90,20 @@ layout: default
         <div class="col-md-4 mb-7 mt-5">
           <div class="text-center px-lg-3">
             <span class="btn btn-icon btn-lg  btn-soft-success rounded-circle mb-5">
-              <span class="fab fa-yelp fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
+              <span class="fab fa-cash-register fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
-            <h3 class="h5">Professional Design</h3>
-            <p class="mb-md-0">Achieve virtually any design and layout from within the one template.</p>
+            <h3 class="h5">EMV-Ready </h3>
+            <p class="mb-md-0">Everpay provides the tools to make integrated EMV card processing a breeze.</p>
           </div>
         </div>
 
         <div class="col-md-4 mb-7 mt-5">
           <div class="text-center px-lg-3">
             <span class="btn btn-icon btn-lg btn-soft-success rounded-circle mb-5">
-              <span class="fas fa-fire fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
+              <span class="fas fa-shield-alt fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
-            <h3 class="h5">Front Strategy</h3>
-            <p class="mb-md-0">We strive to figure out ways to help your business grow through all platforms.</p>
+            <h3 class="h5">Security First</h3>
+            <p class="mb-md-0">Help detect and prevent fraudulent transactions while accepting more orders.</p>
           </div>
         </div>
 
@@ -112,8 +112,8 @@ layout: default
             <span class="btn btn-icon btn-lg btn-soft-success rounded-circle mb-5">
               <span class="fab fa-whmcs fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
-            <h3 class="h5">Unlimited Power</h3>
-            <p class="mb-md-0">Find what you need in one template and combine features at will.</p>
+            <h3 class="h5">Business Credit</h3>
+            <p class="mb-md-0">Flexible financing programs for all business types.</p>
           </div>
         </div>
       </div>                          
