--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ layout: default
         <div class="col-md-4 mb-7 mt-5">
           <div class="text-center px-lg-3">
             <span class="btn btn-icon btn-lg  btn-soft-success rounded-circle mb-5">
-              <span class="fab fa-credit-card fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
+              <span class="fas fa-credit-card fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
             <h3 class="h5">Global Payments</h3>
             <p class="mb-md-0">With one simple integration, your business can accept payments in 50+ currencies and in over 25 countries.</p>
@@ -78,7 +78,7 @@ layout: default
         <div class="col-md-4 mb-7 mt-5">
           <div class="text-center px-lg-3">
             <span class="btn btn-icon btn-lg btn-soft-success rounded-circle mb-5">
-              <span class="fab fa-code-branch fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
+              <span class="fas fa-code-branch fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
             <h3 class="h5">Processor integrations</h3>
             <p class="mb-md-0">Everpay is certified with nearly all major payment processing organizations world wide. </p>
@@ -90,7 +90,7 @@ layout: default
         <div class="col-md-4 mb-7 mt-5">
           <div class="text-center px-lg-3">
             <span class="btn btn-icon btn-lg  btn-soft-success rounded-circle mb-5">
-              <span class="fab fa-cash-register fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
+              <span class="fas fa-cash-register fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
             <h3 class="h5">EMV-Ready </h3>
             <p class="mb-md-0">Everpay provides the tools to make integrated EMV card processing a breeze.</p>
@@ -110,7 +110,7 @@ layout: default
         <div class="col-md-4 mb-7 mt-5">
           <div class="text-center px-lg-3">
             <span class="btn btn-icon btn-lg btn-soft-success rounded-circle mb-5">
-              <span class="fab fa-whmcs fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
+              <span class="fas fa-money-check-alt fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
             <h3 class="h5">Business Credit</h3>
             <p class="mb-md-0">Flexible financing programs for all business types.</p>
@@ -119,7 +119,7 @@ layout: default
       </div>                          
 <img class="img-fluid align-items-center d-md-block w-75 mx-auto mb-7" src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554265683/svg/components/pointer-1.svg" alt="SVG Arrow">
                           
-      <div class="w-md-60 w-lg-50 text-center mx-auto mb-7">
+      <div class="w-md-60 w-lg-50 text-center mx-auto mb-7 mt-5">
         <h4 class="h5">
           It is fast and easy. <span class="font-weight-normal"> Create your first and ongoing website with Everpay.</span>
         </h4>
