--- a/index.html
+++ b/index.html
@@ -127,19 +127,17 @@ layout: default
                           
 <div class="container space-2 md-3">
       <div class="row align-items-lg-center">
-        <div class="col-lg-5 mb-7 mb-lg-0">
+        <div class="mx-auto col-lg-5 mb-7 mb-lg-0">
           <!-- Title -->
           <div class="pr-lg-4">
-            <span class="btn btn-icon btn-soft-primary rounded-circle mb-3">
-              <span class="small font-weight-semi-bold btn-icon__inner">03.</span>
-            </span>
             <h2 class="h4 font-weight-semi-bold text-primary">Now, zero fees for everyone</h2>
             <p class="mb-0">Empowering millions of users, across 130+ countries. Over $1 Billion in assets. 24/7/365 customer access and support. A trusted world-class operation designed specifically for knowledgeable crypto-investors.</p>
           </div>
           <!-- End Title -->
         </div>
-
-        <div id="SVGbusinessAnalysis" class="col-lg-7" style="">
+    </div>        
+	
+<div id="SVGbusinessAnalysis" class="mx-auto align-items-lg-center col-lg-7" style="">
           <!-- SVG Icon -->
           <figure class="ie-business-analysis">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 440.6 228.1" style="enable-background:new 0 0 440.6 228.1;" xml:space="preserve" class="injected-svg js-svg-injector" data-parent="#SVGbusinessAnalysis">
@@ -662,7 +660,6 @@ layout: default
           <!-- End SVG Icon -->
         </div>
       </div>
-    </div>
 				
 <div class="row cols-xs-space cols-sm-space cols-md-space align-items-center mt-5 hidden">
                                 <div class="hidden col-lg-6 order-lg-2 animate-on-scroll fadeIn" data-wow-delay="0.3s">
