--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ layout: default
         <div class="col-md-4 mb-7 mt-5">
           <div class="text-center px-lg-3">
             <span class="btn btn-icon btn-lg  btn-soft-success rounded-circle mb-5">
-              <span class="fas fa-cash-register fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
+              <span class="fas fa-chart-line fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
             <h3 class="h5">EMV-Ready </h3>
             <p class="mb-md-0">Everpay provides the tools to make integrated EMV card processing a breeze.</p>
