--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ layout: default
                 
                             <div class="section-title section-title--style-1 text-center mb-2 animate-on-scroll fadeInDown mt-5">
                                 <h1 class="heading heading-1 c-gray-light strong-600 mt-3">
-                                    <span>Why Us?</span>
+                                    <span>Why Everpay</span>
                                 </h1>
                                 <span class="section-title-delimiter clearfix d-none"></span>
                             </div>
@@ -86,7 +86,7 @@ layout: default
         </div>
       </div>
      
-<div class="row">
+<div class="row mb-5">
         <div class="col-md-4 mb-7 mt-5">
           <div class="text-center px-lg-3">
             <span class="btn btn-icon btn-lg  btn-soft-success rounded-circle mb-5">
@@ -129,7 +129,7 @@ layout: default
       </div>
 </section>
 
-<section class="pb-0">
+<section class="pb-0 mt-5">
                         <div class="row-fluid">
                             <div class="slice px-4 bg-base-2 rounded">
                                 <div class="px-4 sct-inner">
