--- a/index.html
+++ b/index.html
@@ -130,18 +130,18 @@ layout: default
 
 <section class="pb-0 mt-5">
                         <div class="row-fluid">
-                            <div class="slice px-4 bg-base-2 rounded">
+                            <div class="slice px-4 bg-base-5 rounded">
                                 <div class="px-4 sct-inner">
                                     <div class="row justify-content-center cols-xs-space cols-sm-space cols-md-space">
                                         <div class="col-lg-7">
                                             <div class="text-center">
-                                                <h1 class="heading heading-inverse heading-2 text-normal strong-400 ">
+                                                <h1 class="heading heading heading-2 text-normal strong-400">
                                                    Get the right payment solution for your business
                                                 </h1>
                                                 <p class="mt-4 text-lg line-height-1_8">
                                                 Our range of industry-leading payment products and services can help support your business as it grows, though every stage.
                                                 </p>
-                                                <a href="#" class="btn btn-styled btn-gray-light btn-circle mt-4">
+                                                <a href="//id.everpayinc.com" class="btn btn-styled btn-gray-light btn-circle mt-4">
                                                     Get Started
                                                 </a>
                                             </div>
