--- a/index.html
+++ b/index.html
@@ -116,19 +116,13 @@ layout: default
           </div>
         </div>
       </div>                          
-<img class="img-fluid align-items-center d-md-block w-75 mx-auto mb-7" src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554265683/svg/components/pointer-1.svg" alt="SVG Arrow">
-                          
-      <div class="w-md-60 w-lg-50 text-center mx-auto mb-7 mt-5">
-        <h4 class="h5">
-          No More Credit Card Fees, <span class="font-weight-normal"> Create your first and ongoing website with Everpay.</span>
-        </h4>
-      </div>   
+<img class="img-fluid align-items-center d-md-block w-75 mx-auto mb-7" src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554265683/svg/components/pointer-1.svg" alt=""> 
   
         </div>
       </div>
 </section>
 
-<section class="pb-0 mt-5">
+<section class="pb-0 mt-3">
                         <div class="row-fluid">
                             <div class="slice px-4 bg-base-5 rounded">
                                 <div class="px-4 sct-inner">
