--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: default
 <div class="row mt-5">
         <div class="col-md-4 mb-7 mt-5">
           <div class="text-center px-lg-3">
-            <span class="btn btn-icon btn-lg  btn-soft-success rounded-circle mb-5">
+            <span class="btn btn-icon btn-lg btn-soft-success rounded-circle mb-5">
               <span class="fas fa-credit-card fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
             <h3 class="h5">Global Payments</h3>
@@ -135,7 +135,7 @@ layout: default
                                                 <p class="mt-4 text-lg line-height-1_8">
                                                 Our range of industry-leading payment products and services can help support your business as it grows, though every stage.
                                                 </p>
-                                                <a href="//id.everpayinc.com" class="btn btn-styled btn-gray-light btn-circle mt-4">
+                                                <a href="//id.everpayinc.com" class="btn btn-styled btn-soft-success btn-circle mt-4">
                                                     Get Started
                                                 </a>
                                             </div>
