--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@ layout: default
                     </section>                   
 
                     <section class="slice-md sct-color-1" id="sct_what_we_do">
-                        <div class="container mt-5">
+                        <div class="container">
                 
-                            <div class="section-title section-title--style-1 text-center mb-2 animate-on-scroll fadeInDown mt-5">
-                                <h1 class="heading heading-1 c-gray-light strong-600 mt-5">
+                            <div class="section-title section-title--style-1 text-center mb-2 animate-on-scroll fadeInDown">
+                                <h1 class="heading heading-1 c-gray-light strong-600 mt-3">
                                     <span>Why Go Everpay</span>
                                 </h1>
                                 <span class="section-title-delimiter clearfix d-none"></span>
                             </div>
 
-                            <span class="clearfix mt-5"></span>
+                            <span class="clearfix mt-2"></span>
 
                           
-<div class="row mt-5">
+<div class="row mt-3">
         <div class="col-md-4 mb-7 mt-5">
           <div class="text-center px-lg-3">
             <span class="btn btn-icon btn-lg btn-soft-success rounded-circle mb-5">
