--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@ layout: default
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover" style="padding-bottom: 180px; background-image: url(https://res.cloudinary.com/lmj6rf6tz/image/upload/v1508308251/payment-terminal_ffzrvq.jpg); background-position: bottom center;">
+                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover slice-video d-flex align-items-center" data-vide-bg="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%"><div style="position: absolute; z-index: -1; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow: hidden; background-size: cover; background-color: transparent; background-repeat: no-repeat; background-position: 0% 0%;"><video autoplay="" loop="" style="margin: auto; position: absolute; z-index: -1; top: 0%; left: 0%; transform: translate(0%, 0%); visibility: hidden; opacity: 0; width: auto; height: 602px;"><source src="../../assets/media/video/broadwaycrew.mp4" type="video/mp4"><source src="../../assets/media/video/broadwaycrew.webm" type="video/webm">
+                                      <source src="../../assets/media/video/broadwaycrew.ogv" type="video/ogg"></video>
+                                      </div> 
                                         <span class="mask mask-base-1--style-2 alpha-6"></span>
                                         <div class="container container-lg slice--offset-top d-flex align-items-center mt-5">
                                             <div class="col px-0 mt-5">
