--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ layout: default
             <span class="btn btn-icon btn-lg btn-soft-success rounded-circle mb-5">
               <span class="fas fa-credit-card fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
-            <h3 class="h5">Global Payments</h3>
-            <p class="mb-md-0">With one simple integration, your business can accept payments in 50+ currencies and in over 25 countries.</p>
+            <h3 class="h5">Personalized Payments</h3>
+            <p class="mb-md-0">With simple integrations, your business can accept payments in 50+ currencies and in over 25 countries.</p>
           </div>
         </div>
 
@@ -110,7 +110,7 @@ layout: default
             <span class="btn btn-icon btn-lg btn-soft-success rounded-circle mb-5">
               <span class="fas fa-microchip fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
-            <h3 class="h5">Industry Expertise</h3>
+            <h3 class="h5">Leading Industry Expertise</h3>
             <p class="mb-md-0">We have a payment solution for every type of business in every industry.</p>
           </div>
         </div>
@@ -120,7 +120,7 @@ layout: default
             <span class="btn btn-icon btn-lg btn-soft-success rounded-circle mb-5">
               <span class="fas fa-code-branch fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
-            <h3 class="h5">Processor Ggnostic</h3>
+            <h3 class="h5">Processor Agnostic</h3>
             <p class="mb-md-0">Everpay is certified with nearly all major payment processing organizations world wide. </p>
           </div>
         </div>
@@ -132,7 +132,7 @@ layout: default
             <span class="btn btn-icon btn-lg  btn-soft-success rounded-circle mb-5">
               <span class="fas fa-chart-line fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
-            <h3 class="h5">EMV-Ready </h3>
+            <h3 class="h5">EMV-Ready Devices </h3>
             <p class="mb-md-0">Everpay provides the tools to make integrated EMV card processing a breeze.</p>
           </div>
         </div>
@@ -142,7 +142,7 @@ layout: default
             <span class="btn btn-icon btn-lg btn-soft-success rounded-circle mb-5">
               <span class="fas fa-shield-alt fa-2x btn-icon__inner btn-icon__inner-bottom-minus"></span>
             </span>
-            <h3 class="h5">Security First</h3>
+            <h3 class="h5">Security First Thinking</h3>
             <p class="mb-md-0">Help detect and prevent fraudulent transactions while accepting more orders.</p>
           </div>
         </div>
