--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ layout: default
                                 <div class="col-lg-9">
                                     <div class="text-center text-md-left">
                                         <h1 class="heading heading-4 c-base-text-1 text-normal strong-500">
-                                           Everpay <sup>3</sup> delivers payments beyond the desktop. Get started today!
+                                           Everpay delivers payments beyond the desktop. Get started today!
                                         </h1>
                                     </div>
                                 </div>
@@ -240,8 +240,8 @@ layout: default
                                     <h2 class="heading heading-inverse heading-1 strong-600 mb-3">
                                         Let's create something wonderful together!
                                     </h2>
-                                <a href="#" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5 mr-3">Try The Sandbox</a>
-                                <a href="#" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5">Get Your Account</a>
+                                <a href="#" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5 mr-3">Contact Sales</a>
+                                <a href="#" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5">Get Started</a>
                               </div>
                             </div>
                         </div>
