--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+ {% include jumbrotron-landing.html %}
+
 <section class="js-container background-image-holder">
                         <div class="swiper-container" data-swiper-autoplay="false" data-swiper-effect="slide" data-swiper-items="0" data-swiper-space-between="0">
                             <div class="swiper-wrapper">
