--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
  {% include jumbrotron-landing.html %}
 
-<section class="js-container background-image-holder">
+<section class="hidden js-container background-image-holder">
                         <div class="swiper-container" data-swiper-autoplay="false" data-swiper-effect="slide" data-swiper-items="0" data-swiper-space-between="0">
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
