--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@ layout: default
                                     <div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
                                         <div class="swiper-slide swiper-slide-active" style="width: 168.333px; margin-right: 20px;">
                                             <div class="client-logo client-logo--style-3">
-                                                <img src="{{ site.baseurl }}/assets/images/prv/clients/brands/adobe-258x116.png" class="img-responsive">
+                                                <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554265499/paypal_yuvfsh.svg" class="img-responsive">
                                             </div>
                                         </div>
                                         <div class="swiper-slide swiper-slide-next" style="width: 168.333px; margin-right: 20px;">
                                             <div class="client-logo client-logo--style-3">
-                                                <img src="{{ site.baseurl }}/assets/images/prv/clients/brands/jquery-258x116.png" class="img-responsive">
+                                                <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554265500/shopify_enz6yh.svg" class="img-responsive">
                                             </div>
                                         </div>
                                         <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
@@ -36,7 +36,7 @@ layout: default
                                         </div>
                                         <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
                                             <div class="client-logo client-logo--style-3">
-                                                <img src="{{ site.baseurl }}/assets/images/prv/clients/brands/esquire-258x116.png" class="img-responsive">
+                                                <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/e_grayscale/v1457416686/worldpay_dfi53v.png" class="img-responsive">
                                             </div>
                                         </div>
                                         <div class="swiper-slide" style="width: 168.333px; margin-right: 20px;">
@@ -126,7 +126,7 @@ layout: default
           </div>
         </div>
       </div>                          
-<img class="img-fluid align-items-center d-md-block w-65 mx-auto mb-7" src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554265683/svg/components/pointer-1.svg" alt=""> 
+<img class="img-fluid align-items-center d-md-block w-75 mx-auto mb-7" src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554265683/svg/components/pointer-1.svg" alt=""> 
   
         </div>
       </div>
@@ -145,7 +145,7 @@ layout: default
                                                 <p class="mt-4 text-lg line-height-1_8">
                                                 Our range of industry-leading payment products and services can help support your business as it grows, though every stage.
                                                 </p>
-                                                <a href="//id.everpayinc.com" class="btn btn-styled btn-soft-success btn-circle mt-4">
+                                                <a href="//id.everpayinc.com/signup" class="btn btn-styled btn-soft-success btn-circle mt-4">
                                                     Get Started
                                                 </a>
                                             </div>
